@@ -21,7 +21,7 @@
 
 ** New macros AC_C_FLEXIBLE_ARRAY_MEMBER, AC_C_VARARRAYS.
 
-** AC_ARG_WITH now allows '.' in package names.
+** AC_ARG_ENABLE and AC_ARG_WITH now allow '.' in feature and package names.
 
 ** AC_CHECK_DECL now also works with aggregate objects.
 
